--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "npx json-server -w data.json --port"
+    "server": "json-server -w data.json --port 8000"
   },
   "dependencies": {
     "axios": "^1.7.2",
